Hotfix: Fix box name wrapping when dragging an item over it

--- a/src/components/layout/Sidebar/SidebarBox/SidebarBox.module.css
+++ b/src/components/layout/Sidebar/SidebarBox/SidebarBox.module.css
@@ -13,6 +13,6 @@
 }
 
 .linkDragOver {
-    composes: boxLink;
+    composes: boxName;
     background-color: rgb(54, 54, 54);
 }
